@@ -1,1 +1,1 @@
-Project website: http://sourceforge.net/projects/gtkclipit/
+Project website: http://gtkclipit.sourceforge.net/
